# OpenIsle

./: .env.example  .gitignore  404.html  AGENTS.md  CNAME  CONTRIBUTING.md  README.md  backend.html  backend.txt  docker-compose.yml  docs.html  docs.txt  frontend.html  frontend.txt  index.html  index.txt  openapi.html  openapi.txt  package-lock.json
backend/: AGENTS.md  pom.xml
bots/: AGENTS.md
css/: app.9951f3a2.css  chunk-vendors.5fad2328.css
deploy/: AGENTS.md  deploy.sh  deploy_staging.sh
docker/: docker-compose.yaml  mcp-service.Dockerfile
docker/rabbitmq/: definitions.json
docs/: AGENTS.md  README.md  backend.html  backend.txt  frontend.html  frontend.txt  openapi.html  openapi.txt
frontend/: .eslintrc.cjs  nuxt.config.ts  package-lock.json  package.json
frontend_nuxt/: .env.dev.example  .env.example  .env.staging.example  AGENTS.md  app.vue  main.js  nuxt.config.ts  package-lock.json  package.json
js/: app.d8cc04c1.js  app.d8cc04c1.js.map  app.ffff51ca.js  app.ffff51ca.js.map  chunk-vendors.db93ec77.js  chunk-vendors.db93ec77.js.map  chunk-vendors.ef98b3f4.js  chunk-vendors.ef98b3f4.js.map
mcp/: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
mcp/src/openisle_mcp/: __init__.py  __main__.py  client.py  config.py  models.py  search.py  server.py  settings.py
openapi/: adminHello.html  adminHello.txt  admins.html  admins.txt  approve.html  approve.txt  approve_1.html  approve_1.txt  approve_2.html  approve_2.txt  checkToken.html  checkToken.txt  close.html  close.txt  commentsRange.html  commentsRange.txt  count.html  count.txt  create.html  create.txt  createComment.html  createComment.txt  createPost.html  createPost.txt  create_1.html  create_1.txt  dau.html  dau.txt  dauRange.html  dauRange.txt  delete.html  delete.txt  deleteComment.html  deleteComment.txt  deleteMyDraft.html  deleteMyDraft.txt  deletePost.html  deletePost.txt  delete_1.html  delete_1.txt  (+240 more)
scripts/: convert_audio.sh
websocket_service/: AGENTS.md  pom.xml
(+764 files in other folders)
